--- a/cp html/sign-in/css/main.css
+++ b/cp html/sign-in/css/main.css
@@ -1,246 +1,110 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font-size: 14px;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-.v26_167 {
+
+.login-container {
+  display: flex;
+  width: 90%;
+  max-width: 1200px;
+  height: 80vh;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.form-section {
+  flex: 1;
+  background-color: #ffffff;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.image-section {
+  flex: 1;
+  background: url("/cp html/images/v26_180.png") no-repeat center center;
+  background-size: cover;
+}
+
+.logo {
+  width: 150px;
+  height: 50px;
+  background: url("../images/v26_168.png") no-repeat center center;
+  background-size: contain;
+  margin-bottom: 20px;
+}
+
+.title {
+  color: #000000;
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.section-title {
+  color: #00a0fc;
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.input-box {
   width: 100%;
-  height: 1024px;
-  background: rgba(255,255,255,1);
-  opacity: 1;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
+  height: 40px;
+  background: rgba(214, 214, 214, 0.6);
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
-.v26_168 {
-  width: 318px;
-  height: 73px;
-  background: url("../images/v26_168.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 56px;
-  left: 51px;
-  overflow: hidden;
+
+.label {
+  color: rgba(0, 0, 0, 0.49);
+  font-size: 18px;
+  margin-bottom: 10px;
+  display: block;
 }
-.v26_169 {
-  width: 160px;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 164px;
-  left: 51px;
-  font-family: Inter;
-  font-weight: Bold;
-  font-size: 45px;
-  opacity: 1;
-  text-align: left;
+
+.button {
+  width: 100%;
+  max-width: 150px;
+  background-color: #00a0fc;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
 }
-.v26_170 {
-  width: 172px;
-  color: rgba(0,160,252,1);
-  position: absolute;
-  top: 261px;
-  left: 51px;
-  font-family: Inter;
-  font-weight: Semi Bold;
-  font-size: 35px;
-  opacity: 1;
-  text-align: left;
+
+.helper-text {
+  color: rgba(0, 0, 0, 0.49);
+  font-size: 14px;
 }
-.v26_171 {
-  width: 132px;
-  color: rgba(0,160,252,1);
-  position: absolute;
-  top: 609px;
-  left: 51px;
-  font-family: Inter;
-  font-weight: Semi Bold;
-  font-size: 35px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_172 {
-  width: 503px;
-  height: 49px;
-  background: rgba(214,214,214,0.6000000238418579);
-  opacity: 1;
-  position: absolute;
-  top: 317px;
-  left: 51px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-.v26_173 {
-  width: 503px;
-  height: 49px;
-  background: rgba(214,214,214,0.6000000238418579);
-  opacity: 1;
-  position: absolute;
-  top: 400px;
-  left: 51px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-.v26_174 {
-  width: 104px;
-  color: rgba(0,0,0,0.49000000953674316);
-  position: absolute;
-  top: 327px;
-  left: 79px;
-  font-family: Inter;
-  font-weight: Regular;
-  font-size: 23px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_175 {
-  width: 503px;
-  height: 52px;
-  background: rgba(214,214,214,0.6000000238418579);
-  opacity: 1;
-  position: absolute;
-  top: 667px;
-  left: 51px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-.v26_176 {
-  width: 69px;
-  color: rgba(115,115,115,1);
-  position: absolute;
-  top: 679px;
-  left: 79px;
-  font-family: Inter;
-  font-weight: Regular;
-  font-size: 23px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_177 {
-  width: 261px;
-  color: rgba(0,0,0,0.49000000953674316);
-  position: absolute;
-  top: 410px;
-  left: 79px;
-  font-family: Inter;
-  font-weight: Regular;
-  font-size: 23px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_178 {
-  width: 503px;
-  height: 52px;
-  background: rgba(214,214,214,0.6000000238418579);
-  opacity: 1;
-  position: absolute;
-  top: 755px;
-  left: 51px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-.v26_179 {
-  width: 223px;
-  color: rgba(0,0,0,0.49000000953674316);
-  position: absolute;
-  top: 767px;
-  left: 79px;
-  font-family: Inter;
-  font-weight: Regular;
-  font-size: 23px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_180 {
-  width: 746px;
-  height: 100%;
-  background: url("../images/v26_180.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 694px;
-  overflow: hidden;
-}
-.v26_181 {
-  width: 281px;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 957px;
-  left: 51px;
-  font-family: Inter;
-  font-weight: Semi Bold;
-  font-size: 25px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_182 {
-  width: 163px;
-  height: 42px;
-  background: rgba(0,160,252,1);
-  opacity: 1;
-  position: absolute;
-  top: 483px;
-  left: 51px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-.v26_183 {
-  width: 163px;
-  height: 42px;
-  background: rgba(0,160,252,1);
-  opacity: 1;
-  position: absolute;
-  top: 841px;
-  left: 47px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  overflow: hidden;
-}
-.v26_184 {
-  width: 66px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 490px;
-  left: 100px;
-  font-family: Inter;
-  font-weight: Regular;
-  font-size: 23px;
-  opacity: 1;
-  text-align: left;
-}
-.v26_185 {
-  width: 66px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 848px;
-  left: 96px;
-  font-family: Inter;
-  font-weight: Regular;
-  font-size: 23px;
-  opacity: 1;
-  text-align: left;
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .login-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .image-section {
+    height: 200px;
+  }
+
+  .button {
+    max-width: 100%;
+    padding: 15px;
+  }
 }
